@@ -72,6 +72,11 @@ void parse_platform_file(const std::string& file)
    */
   if (is_lua) {
 #if SIMGRID_HAVE_LUA
+    static bool already_warned = false;
+    if (not already_warned) { // XBT_ATTRIB_DEPRECATED_v332
+      XBT_WARN("You are using a lua platform file. This feature is deprecated and will disappear after SimGrid v3.31.");
+      already_warned = true;
+    }
     lua_State* L = luaL_newstate();
     luaL_openlibs(L);
 
